# polymino

./: Makefile.am  README.md  autogen.sh  configure.ac
data/: Makefile.am  org.el.polymino.desktop.in  org.el.polymino.gschema.xml.in.in  org.el.polymino.service.in  polymino.glade  polymino.gresource.xml
data/css/: styles.css
data/ui/: window.ui
po/: LINGUAS  POTFILES.in  ru.po
src/: Makefile.am  application.vala  config.vapi  frame.vala  piece.vala  polymino.vala  preview.vala  window.vala
